# power-profiles-applet

./: Cargo.toml  LICENSE  README.md
src/: main.rs
